decafcomp/llvm/test/loops.llvm.bc.err
/usr/local/Cellar/llvm38/3.8.0/lib/llvm-3.8/bin/llvm-as: llvm/test/loops.llvm:7:23: error: use of undefined value '%size'
  store i32 100, i32* %size
                      ^
